--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -1,45 +1,46 @@
 .homePage {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    min-height: 100vh;
+    height: 696px;
+    width: 1440px;
     background-image: url('/public/img/Picture.png');
-    /* Заменить на путь к изображению баннера */
     background-size: cover;
     background-position: center;
 }
 
 .banner {
-    text-align: center;
+    text-align: left;
     color: white;
-    background: rgba(0, 0, 0, 0.6);
-    /* Полупрозрачный фон */
-    padding: 20px;
+    padding: 20px 60px;
     border-radius: 10px;
 }
 
 .title {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
+    color: #F7F7F7;
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 1.6;
+    margin-bottom: 10px;
 }
 
 .description {
-    font-size: 1.2rem;
-    margin-bottom: 30px;
+    color: #F7F7F7;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 1;
+    margin-bottom: 40px;
 }
 
 .button {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 16px 60px;
     font-size: 1rem;
     color: white;
-    background-color: #007bff;
-    /* Яркий цвет кнопки */
+    background-color: #E44848;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 200px;
     transition: background-color 0.3s;
-}
-
-.button:hover {
-    background-color: #0056b3;
 }
