--- a/src/components/CamperCard/CamperCard.module.css
+++ b/src/components/CamperCard/CamperCard.module.css
@@ -34,9 +34,11 @@
 }
 
 .name {
-    font-size: 22px;
-    font-weight: bold;
-    margin: 0;
+    color: var(--Main, #101828);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 1.3;
 }
 
 .footer {
@@ -46,9 +48,11 @@
 }
 
 .price {
-    font-size: 20px;
-    font-weight: bold;
-    color: #000;
+    color: var(--Main, #101828);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 1.3;
     margin: 0;
 }
 
@@ -79,6 +83,12 @@
 .rating {
     display: flex;
     align-items: center;
+    color: var(--Main, #101828);
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 .description {
@@ -106,13 +116,6 @@
     padding: 0px;
 }
 
-/* .features span {
-    display: inline-block;
-    background-color: #f2f2f2;
-    border-radius: 8px;
-    padding: 6px 12px;
-    font-size: 12px;
-} */
 
 .showMore {
     background-color: #ff4d4f;
