--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -8,9 +8,9 @@
 
 .filterInput {
     display: flex;
-    width: 360px;
+    width: 312px;
     height: 56px;
-    padding: 0px 0px 0px 20px;
+    padding: 0px 0px 0px 48px;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -18,6 +18,19 @@
     border: none;
     border-radius: 12px;
     background-color: #F7F7F7;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: black;
+}
+
+.filterInput::placeholder {
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #6C717B;
 }
 
 .filterInput:focus {
@@ -92,6 +105,9 @@
 }
 
 .icon2 {
+    position: absolute;
+    top: 74px;
+    left: 27px;
 }
 
 
@@ -127,6 +143,7 @@
     letter-spacing: -0.005em;
     text-align: center;
     color: rgb(16, 24, 40);
+    margin: 0px;
 }
 
 .checkboxLabel.active {
@@ -149,5 +166,5 @@
 }
 
 .locationFilter {
-    position: relative; 
+    position: relative;
 }
