--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
   background-color: white;
+  box-sizing: border-box;
+
 }
 
 ul {
@@ -13,3 +15,7 @@ ul {
 li {
   list-style: none;
 }
+
+body,
+html,
+.parent {}
