--- a/src/components/CatalogPage/CatalogPage.module.css
+++ b/src/components/CatalogPage/CatalogPage.module.css
@@ -61,3 +61,16 @@
     align-items: center;
     height: 30vh;
 }
+
+.notFound {
+    color: #ff4d4d;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin: 20px 0;
+    padding: 10px;
+    border: 2px solid #ff4d4d;
+    border-radius: 8px;
+    background-color: #ffe6e6;
+
+}
